@@ -1,3 +1,9 @@
+2003-09-17  Don Porter  <dgp@users.sourceforge.net>
+
+        * generic/tkImage.c:    Stopped [image create] from generating an
+        * tests/image.test:     image command name that would overwrite an
+        existing command name.  Thanks to Michael Schlenker.  [Bug 808039].
+
 2003-08-19  Joe English  <jenglish@users.sourceforge.net>
 	* generic/tkPanedWindow.c(PanedWindowWorldChanged):
 	Set window background from the -background resource.
